--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
           {% if session.user_id %}
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/locations">Locations Near Me</a></li>
+              <li><a href="/locations">Hospitals Near Me</a></li>
               <li><a href="/records">Medical Records</a></li>
               <li><a href="/logout">Log Out</a></li>
             </ul>
