--- a/static/styles.css
+++ b/static/styles.css
@@ -125,8 +125,7 @@ button:hover{
 .htextbox{
     margin-top: 25px;
     margin: 0px;
-    width: 30%;
-    margin-left: 3%;
+    width: 100%;
     margin-right: 60%;
     height: 435px;
     background: #ffffff;
@@ -134,7 +133,8 @@ button:hover{
     left: 0%;
     position: absolute;
     box-sizing: border-box;
-    border: 5px #ffaaaa solid;
+    border-top: 5px #ffaaaa solid;
+    border-top: 5px #ffaaaa solid;
 }
 .htextbox h1{
     margin-right: 7%;
