--- a/static/styles.css
+++ b/static/styles.css
@@ -127,7 +127,7 @@ button:hover{
     margin: 0px;
     width: 100%;
     margin-right: 60%;
-    height: 435px;
+    height: 700px;
     background: #ffffff;
     color: black;
     left: 0%;
@@ -171,11 +171,10 @@ button:hover{
     overflow-wrap:initial;
 }
 .htextbox2{
-    float: right;
-    width: 30%;
-    margin-left: 35%;
-    height: 435px;
-    background: #ffffff;
+    margin-top: 700px;
+    width: 100%;
+    height: 700px;
+    background: #ffaaaa98;
     color: black;
     left: 0%;
     box-sizing: border-box;
