--- a/static/styles.css
+++ b/static/styles.css
@@ -13,8 +13,9 @@
     background-repeat: no-repeat; 
 } */
 .banner{
-    background:url(../static/background.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.171),rgba(179, 179, 179, 0.603)),url(background.jpg);
+    /* background:url(../static/background.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.171),rgba(255, 255, 255, 0.603)),url(background.jpg); */
+    background-color:rgb(255, 255, 255);
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -23,8 +24,8 @@
 .fixednavbar{
     width: 100%;
     height: 100px;
-    background: #2c2c2cf3;
-    color: black;
+    background: #ffaaaa;
+    color: rgb(2, 2, 2);
     top: 18px;
     left: 50%;
     position: fixed;
