--- a/static/styles.css
+++ b/static/styles.css
@@ -23,7 +23,7 @@
 .fixednavbar{
     width: 100%;
     height: 100px;
-    background: #ffaaaa;
+    background: #302c2c;
     color: rgb(2, 2, 2);
     top: 18px;
     left: 50%;
