--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,9 @@
     </head>
     <body class= "banner">
         <div class="homepage">
-            <h1>Welcome to InstaMed!</h1>
-            <p>A new method to reduce hassle, store medical information, and get prompt medical assistance.</p>
+            <h1>A new method of storing medical records and getting prompt assistance.</h1>
+            <p>A movement to increase efficiency and improve the logistics of hospitals around the globe. </p>
+            <button type= "button"><span></span>Get Started</button>
         </div>
         <div class="htextbox">
             <br>
@@ -27,7 +28,7 @@
         </div>
         <div class = "htextbox2">
             <br>
-            <h1>TBD</h1>
+            <h1></h1>
             <br>
             <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
             <br>
