--- a/static/styles.css
+++ b/static/styles.css
@@ -82,15 +82,29 @@
     font-weight: bold;
     font-size: 70px;
     margin-top: 33%;
-    text-decoration: underline #ffaaaa;
+    
+    /* text-decoration: underline #ffaaaa; */
 }
 .homepage p{
     margin: 35px auto;
     font-weight: 100;
-    line-height: 25px;
+    font-size: 24px;
+    /* line-height: 25px; */
+}
+.homepage button{
+    background-color:#ffbfbf;
+    border-color: white;
+    position:relative;
+    margin-left:0;
+    margin-bottom: 0%;
+    /* align-self: center; */
+}
+
+.homepage span{
+    background-color: white;
 }
 button{
-    align-self: center;
+    /* align-self: center; */
     margin-left: 25%;
     width: 50%;
     padding: 15px 0;
@@ -101,7 +115,7 @@ button{
     background: #fafafa;
     color: rgb(0, 0, 0);
     cursor: pointer;
-    position: absolute;
+    position: relative;
     overflow: hidden;
     z-index: 3;
 }
@@ -156,7 +170,7 @@ button:hover{
     text-align: center;
     color: #2c2c2cf3;
     font-weight:lighter;
-    font-size: 18px;
+    font-size: px;
     display: flex;
     margin-right: 7%;
     overflow-wrap:initial;
