--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
               <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/locations">Hospitals Near Me</a></li>
-                <li><a href="/input">Input Patient Records</a>></li>
+                <li><a href="/admin_input">Input Patient Records</a>></li>
                 <li><a href="/logout">Log Out</a></li>
               </ul>
             {% else %}
