--- a/templates/index.html
+++ b/templates/index.html
@@ -14,35 +14,43 @@
         <div class="homepage">
             <h1>A new method of storing medical records and getting prompt assistance.</h1>
             <p>A movement to increase efficiency and improve the logistics of hospitals around the globe. </p>
-            <button type= "button"><span></span>Get Started</button>
+            <a href=/register><button type= "button"><span></span>Get Started</button></a>
+            <!-- <button type= "button"><span></span>Get Started</button> -->
         </div>
         <div class="htextbox">
             <br>
-            <h1>Our Purpose</h1>
+            <h1>An easy method to store important medical data and access it <b>anywhere.</b></h1>
             <br>
             <p> Current methods of storing medical records and other valuable information are incredibly inefficient. Our service attempts to deliver a concise way of viewing medical records. In addition, the website is updated with a live map able to tell you where the closest hospitals are with information on closing and opening times. 
             </p>
             <br>
-            <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>BUTTON</button>
+            <!-- <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>BUTTON</button> -->
         </div>
         <div class = "htextbox2">
             <br>
-            <h1></h1>
+            <h1>Features and Usage</h1>
             <br>
-            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <p> -Google Maps embed provides directions and gives a sense of the closest emergency room locations<br>
+                -Patients can easily view and store medical records and transport them from hospital to hospital easily<br>
+                -Administrators can update one's vaccination records and more without having to worry about storing papers or losing them<br>
+            </p>
             <br>
-            <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>BUTTON</button>
+            <!-- <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>BUTTON</button> -->
         </div>
         <div class = "htextbox3">
             <br>
             <h1>TBD</h1>
             <br>
-            <p> text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</p>
+            <p><ul>
+                <li></li>
+                <li>Example 2</li>
+                <li>Example 3</li>
+                </ul></p>
             <br>
-            <h6> <b>Join the Instamed Team Today!</b></h6>
-            <button type= "button"><span></span>BUTTON</button>
+            <!-- <h6> <b>Join the Instamed Team Today!</b></h6>
+            <button type= "button"><span></span>BUTTON</button> -->
             <br><br><br><br><br><br>
             </div>
     </body>
