--- a/static/styles.css
+++ b/static/styles.css
@@ -545,10 +545,9 @@ button:hover{
 }
 
 .adminbox{
-    margin-top: 125px;
-    margin-bottom: 100px;
-    width: 330px;
-    height: 825px;
+    margin-top: 500px;
+    width: 50%;
+    height: 1450px;
     background: white;
     color: black;
     top: 50%;
@@ -556,7 +555,7 @@ button:hover{
     position: absolute;
     transform: translate(-50%,-50%);
     box-sizing: border-box;
-    border: 2px #ffaaaa solid;
+    border: 5px #ffaaaa solid;
 }
 .h1admin{
     margin: 0;
@@ -567,13 +566,13 @@ button:hover{
 }
 .adminbox p{
     margin: 0;
-    margin-left: 15px;
+    margin-left: 10%;
     padding: 0;
     font-weight: bold;
 }
 .adminbox input{
-    width: 290px;
-    margin-left: 15px;
+    width: 80%;
+    margin-left: 10%;
     margin-bottom: 25px;
 }
 .adminbox input[type="text"], input[type="password"]{
@@ -627,16 +626,4 @@ button:hover{
     color: black;
     font-size: 15px;
     font-weight: lighter;
-}
-.dropdowntype{
-    width: 290px;
-    margin-left: 15px;
-    position: center;
-    border: none;
-    border-bottom: 1px solid black;
-    outline: none;
-    height: 50px;
-    color: black;
-    font-size: 15px;
-    font-weight: bold;
 }
