--- a/templates/admin_input.html
+++ b/templates/admin_input.html
@@ -17,9 +17,9 @@
                 <p>Patient's Name:</p>
                 <input type="text" name="name" placeholder="-first last-">
                 <p>Surgical History:</p>
-                <input type="text" name="password" placeholder="-surgical history-"/>
+                <input type="text" name="surgial_history" placeholder="-surgical history-"/>
                 <p>Obsteric History:</p>
-                <input type="text" name="obsteric-history" placeholder="-obsteric history-"/>
+                <input type="text" name="obsteric_history" placeholder="-obsteric history-"/>
                 <p>Medications</p>
                 <input type="text" name="medications" placeholder="-medications-"/>
                 <p>Allergies</p>
@@ -41,7 +41,7 @@
                 <p>Notes</p>
                 <input type="text" name="notes" placeholder="-extra patient info-"/>
                 <div class="admin-submit">
-                    <input type="submit" name="" value="submit"/>
+                    <input type="submit" name="" value="Submit Patinet's Information"/>
                     <span></span> 
                 </div>
                 <br>
