--- a/static/styles.css
+++ b/static/styles.css
@@ -600,11 +600,11 @@ button:hover{
     overflow: hidden;
 }
 .admin-submit span{
-    margin-left: 15px;
+    margin-left: 10%;
     margin-right: 15px;
     margin-bottom: 31px;
     background: #ffaaaa;
-    height: 40px;
+    height: 50px;
     width: absolute;
     border-radius: 25px;
     position: absolute;
@@ -614,17 +614,8 @@ button:hover{
     transition: 0.5s
 }
 .admin-submit:hover span{
-    width: 290px;
+    width: 80%;
 }
 .admin-submit:hover{
     border:none;
-}
-.admin-submit input[type="date"] {
-    border: none;
-    border-bottom: 1px solid black;
-    outline: none;
-    height: 50px;
-    color: black;
-    font-size: 15px;
-    font-weight: lighter;
 }
