--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -17,18 +17,15 @@
         <br>
         <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. 
         </p>
-        <br>
-        <br><br><br><br><br>
     </div>
     <div class="mapcover">
         <br><br>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d97124.81473088558!2d-74.74019812433745!3d40.47193626093873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospital%20near%20me!5e0!3m2!1sen!2sus!4v1623458119901!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d97124.81473088558!2d-74.74019812433745!3d40.47193626093873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospital%20near%20me!5e0!3m2!1sen!2sus!4v1623458119901!5m2!1sen!2sus"></iframe>
         <!-- <iframe  class="map"src="https://www.google.com/maps/d/u/0/embed?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP"></iframe> -->
         <!-- https://www.google.com/maps/d/u/0/viewer?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP&ll=40.36621118150702%2C-74.66137564768417&z=8 -->
     </div>
     <div class="mapcover">
         <h1>Emergency Locations near Montgomery NJ</h1>
-        
     </div>
 </body>
 {% endblock %}
