--- a/templates/Records.html
+++ b/templates/Records.html
@@ -10,5 +10,16 @@
         <link href="/static/styles.css" rel="stylesheet">
 
     </head>
-    <!-- TODO -->
+    <body class= "banner">
+        <div class="htextboxb">
+            <br>
+            <h1>Locations</h1>
+            <br>
+            <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. 
+            </p>
+            <br>
+            <br><br><br><br><br>
+        </div>
+    </body>
+
 {% endblock %}
