--- a/static/styles.css
+++ b/static/styles.css
@@ -235,7 +235,7 @@ button:hover{
 /* this is htextbox3 */
 .htextbox3{
     width: 100%;
-    height: 200px;
+    height: 400px;
     margin-top: 1400px;
     background: #ffffffbe;
     color: black;
@@ -514,6 +514,53 @@ button:hover{
     overflow-wrap:initial;
 }
 .htextboxa h6{
+    margin-left: 7%;
+    margin-right: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight: bold;
+    font-size: 20px;
+    overflow-wrap:initial;
+}
+.htextboxb{
+    margin-top:100px;
+    width: 100%;
+    margin-right: 60%;
+    height: 800px;
+    background: #ffffffe5;
+    color: black;
+    left: 0%;
+    position: absolute;
+    box-sizing: border-box;
+    border-top: 5px #ffaaaa solid;
+    border-top: 5px #ffaaaa solid;
+}
+.htextboxb h1{
+    margin-right: 40%;
+    margin-left: 7%;
+    text-align: center;
+    color: #000000f3;
+    font-weight: none;
+    font-size: 40px;
+    text-decoration: underline #ffaaaa;
+}
+.htextboxb img{
+    float: right;
+    margin-left: 3%;
+    display: flex;
+    margin-right: 7%;
+}
+.htextboxb p{
+    margin-left: 7%;
+    text-align: center;
+    color: #2c2c2cf3;
+    font-weight:lighter;
+    font-size: 24px;
+    display: flex;
+    margin-right: 40%;
+    overflow-wrap:initial;
+}
+.htextboxb h6{
     margin-left: 7%;
     margin-right: 7%;
     text-align: center;
