--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
         </div>
         <div class="htextbox">
             <br>
+            <img src="/static/background1.png" class="himg1">
             <h1>An easy method to store important medical data and access it <b>anywhere.</b></h1>
             <br>
             <p> Current methods of storing medical records and other valuable information are incredibly inefficient. Our service attempts to deliver a concise way of viewing medical records. In addition, the website is updated with a live map able to tell you where the closest hospitals are with information on closing and opening times. 
