--- a/templates/emptyRecords.html
+++ b/templates/emptyRecords.html
@@ -1,4 +1,4 @@
-<!-- Medical Records -->
+<!-- Empty Medical Records -->
 {% extends "layout.html" %}
 
 {% block title %}
@@ -13,9 +13,9 @@
     <body class= "banner">
         <div class="htextboxb">
             <br>
-            <h1>Locations</h1>
+            <h1>Records</h1>
             <br>
-            <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. 
+            <p> None available at this time. Contact your physician's office for more details.
             </p>
             <br>
             <br><br><br><br><br>
