--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,7 @@
 } */
 .banner{
     background:url(../static/background.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.247),rgba(255, 2, 2, 0.603)),url(background.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.247),#ffaaaa),url(background.jpg);
     background-attachment: fixed;
     height: 800px;
     background-size: cover;
@@ -181,15 +181,23 @@ button:hover{
     overflow-wrap:initial;
 }
 .himg1{
-    margin-top: 7%;
     width: 40%;
     position: absolute;
     border: 5px #ffaaaa solid;;
+    float: right;
+    margin-top: 7%;
 }
 .htextbox img{
-    float: right;
     margin-right: 7%;
     margin-left: 55%;
+}
+.himg2{
+    border: 5px rgba(0, 0, 0, 0.342) solid;;
+    width: 40%;
+    position: absolute;
+    float: left;
+    margin-left: 7%;
+    margin-top: 10%;
 }
 .htextbox2{
     margin-top: 700px;
@@ -203,8 +211,9 @@ button:hover{
     position:absolute;
 }
 .htextbox2 h1{
+    margin-top: 10%;
     margin-right: 7%;
-    margin-left: 40%;
+    margin-left: 50%;
     text-align: center;
     color: #000000f3;
     font-weight: none;
@@ -219,7 +228,7 @@ button:hover{
     background-color: white;
 }
 .htextbox2 p{
-    margin-left: 40%;
+    margin-left: 50%;
     text-align: center;
     color: #2c2c2cf3;
     font-weight:lighter;
