--- a/static/styles.css
+++ b/static/styles.css
@@ -503,7 +503,7 @@ button:hover{
     border: 5px #ffaaaa solid;
 }
 .htextboxa h1{
-    margin-top: 27c%;
+    margin-top: 27%;
     margin-right: 7%;
     margin-left: 7%;
     text-align: center;
