--- a/static/styles.css
+++ b/static/styles.css
@@ -541,7 +541,7 @@ button:hover{
     margin-top:100px;
     width: 100%;
     margin-right: 60%;
-    height: 800px;
+    height: 855px;
     background: #ffffffe5;
     color: black;
     left: 0%;
@@ -551,8 +551,7 @@ button:hover{
     border-top: 5px #ffaaaa solid;
 }
 .htextboxb h1{
-    margin-right: 40%;
-    margin-left: 7%;
+    margin-top: 10%;
     text-align: center;
     color: #000000f3;
     font-weight: none;
@@ -566,13 +565,10 @@ button:hover{
     margin-right: 7%;
 }
 .htextboxb p{
-    margin-left: 7%;
     text-align: center;
     color: #2c2c2cf3;
     font-weight:lighter;
     font-size: 24px;
-    display: flex;
-    margin-right: 40%;
     overflow-wrap:initial;
 }
 .htextboxb h6{
