--- a/templates/admin_input.html
+++ b/templates/admin_input.html
@@ -31,7 +31,7 @@
                 <p>Habits</p>
                 <input type="text" name="habits" placeholder="-habits-"/>
                 <p>Immunization</p>
-                <input type="text" name="immunization" placeholder="-immunizitation-"/>
+                <input type="text" name="immunization" placeholder="-immunization-"/>
                 <p>Developmental History</p>
                 <input type="text" name="developmental_history" placeholder="-developmental history-"/>
                 <p>Demographics</p>
@@ -41,7 +41,7 @@
                 <p>Notes</p>
                 <input type="text" name="notes" placeholder="-extra patient info-"/>
                 <div class="admin-submit">
-                    <input type="submit" name="" value="Submit Patinet's Information"/>
+                    <input type="submit" name="" value="Submit Patient's Information"/>
                     <span></span> 
                 </div>
                 <br>
