--- a/templates/admin_input.html
+++ b/templates/admin_input.html
@@ -13,13 +13,13 @@
         <div class="adminbox">
             <br>
             <h1 class= "h1admin">Input Patient's Medical Information</h1>
-            <form action = "/register" method = "post">
+            <form action = "/admin_input" method = "post">
                 <p>Patient's Name:</p>
                 <input type="text" name="name" placeholder="-first last-">
                 <p>Surgical History:</p>
-                <input type="text" name="surgial_history" placeholder="-surgical history-"/>
+                <input type="text" name="surgical_history" placeholder="-surgical history-"/>
                 <p>Obsteric History:</p>
-                <input type="text" name="obsteric_history" placeholder="-obsteric history-"/>
+                <input type="text" name="obstetric_history" placeholder="-obsteric history-"/>
                 <p>Medications</p>
                 <input type="text" name="medications" placeholder="-medications-"/>
                 <p>Allergies</p>
@@ -37,7 +37,7 @@
                 <p>Demographics</p>
                 <input type="text" name="demographics" placeholder="-demographics-"/>
                 <p>Medical Encounters</p>
-                <input type="text" name="medical_records" placeholder="-medical records-"/>
+                <input type="text" name="medical_encounters" placeholder="-medical records-"/>
                 <p>Notes</p>
                 <input type="text" name="notes" placeholder="-extra patient info-"/>
                 <div class="admin-submit">
