--- a/templates/Locations.html
+++ b/templates/Locations.html
@@ -25,7 +25,7 @@
         <!-- https://www.google.com/maps/d/u/0/viewer?mid=1147CshSU5YU-s2iHpVEc1nIyOpxsN7EP&ll=40.36621118150702%2C-74.66137564768417&z=8 -->
     </div>
     <div class="mapcover">
-        <h1>Emergency Locations near Montgomery NJ</h1>
+        <h1>Emergency Locations near Montgomery, NJ</h1>
     </div>
 </body>
 {% endblock %}
