--- a/templates/Records.html
+++ b/templates/Records.html
@@ -13,12 +13,13 @@
     <body class= "banner">
         <div class="htextboxb">
             <br>
-            <h1>Locations</h1>
+            <h1>Records</h1>
             <br>
-            <p> Use the Google Maps embed to find information regarding the closest hospitals and emergency rooms in the area. 
+            <p> Records
             </p>
             <br>
             <br><br><br><br><br>
+            <iframe src="http://docs.google.com/gview?url=http://infolab.stanford.edu/pub/papers/google.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
         </div>
     </body>
 
