--- a/static/styles.css
+++ b/static/styles.css
@@ -540,8 +540,7 @@ button:hover{
 .htextboxb{
     margin-top:15%;
     width: 100%;
-    margin-right: 60%;
-    height: 320%;
+    margin-right: 60%;;
     background: #ffffffd7;
     color: black;
     left: 0%;
